Change height of body to prevent scrollbar from appearing.

--- a/style.scss
+++ b/style.scss
@@ -1,11 +1,11 @@
 body, html {
-  height: 100%;
+  height: 99.5%;
   background: url("./../assets/background-pic.jpg") no-repeat;
   background-size: cover;
 }
 
 #main-content{
-  opacity: 0;
+  display: none;
 }
 
 .game-container {
